--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-repository: tomjoht/documentation-theme-jekyll
+repository: sbstn-jmnz/front_end_with_vue
 
 output: web
 # this property is useful for conditional filtering of content that is separate from the PDF.
@@ -12,7 +12,7 @@ site_title: Programa Desarrollo FrontEnd
 company_name: Sbstn Jmnz
 # this appears in the footer
 
-github_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
+github_editme_path: sbstn-jmnz/front_end_with_vue/blob/dev/
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
 # gitlab_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
@@ -33,15 +33,16 @@ exclude:
   - vendor
 # these are the files and directories that jekyll will exclude from the build
 
+# TODO: Don't know what this does
 feedback_subject_line: Jekyll documentation theme
 
-feedback_email: tomjoht@gmail.com
+feedback_email: hi@sbstnjmnz.com
 # used as a contact email for the Feedback link in the top navigation bar
 
 # feedback_disable: true
 # if you uncomment the previous line, the Feedback link gets removed
 
-# feedback_text: "Need help?"
+feedback_text: "Need help?"
 # if you uncomment the previous line, it changes the Feedback text
 
 # feedback_link: "http://helpy.io/"
@@ -96,6 +97,17 @@ defaults:
       search: true
       sidebar: home_sidebar
       topnav: topnav
+    
+    scope:
+      path: "pages/vuejs"
+      type: "vuejs"
+    values:
+      layout: "post"
+      comments: true
+      # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
+      search: true
+      sidebar: vuejs_sidebar
+      topnav: topnav
 
 # these are defaults used for the frontmatter for these file types
 
@@ -105,6 +117,7 @@ sidebars:
 - product1_sidebar
 - product2_sidebar
 - other
+- vuejs_sidebar
 
 description: "Intended as a documentation theme based on Jekyll for technical writers documenting software and other technical products, this theme has all the elements you would need to handle multiple products with both multi-level sidebar navigation, tags, and other documentation features."
 # the description is used in the feed.xml file
