--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -32,6 +32,15 @@ topnav_dropdowns:
         - title: Product 2
           url: /p2_landing_page.html
     - title: VueJS
+    - title: ES6+
+      folderitems:
+        - title: Jekyll Documentation Theme
+          url: /mydoc_introduction.html
+        - title: Product 1
+          url: /p1_landing_page.html
+        - title: Product 2
+          url: /p2_landing_page.html
+    - title: VueJS
       folderitems:
         - title: Jekyll Documentation Theme
           url: /mydoc_introduction.html
