--- a/_config.yml
+++ b/_config.yml
@@ -100,10 +100,10 @@ defaults:
     
     scope:
       path: "pages/vuejs"
-      type: "vuejs"
+      type: "pages"
     values:
-      layout: "post"
-      comments: true
+      layout: "page"
+      comments: false
       # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
       search: true
       sidebar: vuejs_sidebar
