--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -7,14 +7,14 @@ topnav_dropdowns:
   folders:
     - title: Fundamentos Web
       folderitems:
-        - title: Jekyll Talk
-          external_url: https://talk.jekyllrb.com
-        - title: Jekyll documentation
-          external_url: http://jekyllrb.com/docs/home/
-        - title: Jekyll on Stack Overflow
-          external_url: http://stackoverflow.com/questions/tagged/jekyll
-        - title: Jekyll on my blog
-          external_url: http://idratherbewriting.com/category-jekyll/
+        - title: Html y Css
+          url: /conceptos_basicos_html_css.html
+        - title: Bootstrap
+          url: /bootstap.html
+        - title: Javascript
+          url: /javascript.html
+        - title: Terminal, Git, Github y Github Pages
+          url: /terminal_github.html
     - title: CSS
       folderitems:
         - title: Jekyll Documentation Theme
